force-app/main/default/objects/Default_Search_Settings__mdt/Default_Search_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Default Search Setting</label>
    <pluralLabel>Default Search Settings</pluralLabel>
</CustomObject>