force-app/main/default/objects/Default_Search_Settings__mdt/fields/Community_Condition_Expression__c.field-meta.xml
<CustomField>
    <fullName>Community_Condition_Expression__c</fullName>
    <label>Community Condition Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>