force-app/main/default/objects/Default_Search_Settings__mdt/fields/Condition_Expression__c.field-meta.xml
<CustomField>
    <fullName>Condition_Expression__c</fullName>
    <label>Condition Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>