force-app/main/default/objects/Default_Search_Settings__mdt/fields/Knowledge_Fields_To_Retrieve__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Fields_To_Retrieve__c</fullName>
    <label>Knowledge Fields To Retrieve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>