force-app/main/default/objects/Default_Search_Settings__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>