force-app/main/default/objects/Default_Search_Settings__mdt/fields/Search_Query__c.field-meta.xml
<CustomField>
    <fullName>Search_Query__c</fullName>
    <label>Search Query</label>
    <length>200</length>
    <type>Text</type>
</CustomField>